--- a/notebooks/ExplorationBook.ipynb
+++ b/notebooks/ExplorationBook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "abd838c3",
    "metadata": {},
    "outputs": [],
@@ -16,17 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3f0405c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"../output/sanity_check.csv\")"
+    "df = pd.read_csv(r\"../output/kfold.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b9161df4",
    "metadata": {},
    "outputs": [],
@@ -52,6 +52,159 @@
     "    dataset[metric] = dataset[\"output_metrics\"].apply(\n",
     "        lambda x: x.get(metric) if isinstance(x, dict) else np.nan\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d055c82b-577d-482b-a933-a2ec132e7173",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>run_id</th>\n",
+       "      <th>run_config</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>model</th>\n",
+       "      <th>execution_mode</th>\n",
+       "      <th>eval_metric</th>\n",
+       "      <th>best_params</th>\n",
+       "      <th>best_score</th>\n",
+       "      <th>score_std</th>\n",
+       "      <th>output_metrics</th>\n",
+       "      <th>saved_model_path</th>\n",
+       "      <th>run_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>202309-1713-2319-2541b093-306a-41cc-9e60-6b2fc...</td>\n",
+       "      <td>{'dataset': 'iris', 'model': 'xgb', 'best_para...</td>\n",
+       "      <td>iris</td>\n",
+       "      <td>xgb</td>\n",
+       "      <td>hyperopt_kfold</td>\n",
+       "      <td>accuracy</td>\n",
+       "      <td>{'alpha': 3.9316627966597033, 'colsample_bytre...</td>\n",
+       "      <td>0.946667</td>\n",
+       "      <td>0.026667</td>\n",
+       "      <td>{'accuracy': [0.9666666666666667, 0.9666666666...</td>\n",
+       "      <td>./output/modelsaves/iris/xgb/202309-1713-2319-...</td>\n",
+       "      <td>2.860786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>202309-1713-2321-50e57c58-0154-4c76-8c5a-d497e...</td>\n",
+       "      <td>{'dataset': 'iris', 'model': 'catboost', 'best...</td>\n",
+       "      <td>iris</td>\n",
+       "      <td>catboost</td>\n",
+       "      <td>hyperopt_kfold</td>\n",
+       "      <td>accuracy</td>\n",
+       "      <td>{'bagging_temperature': 0.14228166126511824, '...</td>\n",
+       "      <td>0.960000</td>\n",
+       "      <td>0.038873</td>\n",
+       "      <td>{'accuracy': [1.0, 0.9666666666666667, 0.93333...</td>\n",
+       "      <td>./output/modelsaves/iris/catboost/202309-1713-...</td>\n",
+       "      <td>34.557710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>202309-1713-2356-98436ca0-49db-4b1c-923b-b8f99...</td>\n",
+       "      <td>{'dataset': 'titanic', 'model': 'xgb', 'best_p...</td>\n",
+       "      <td>titanic</td>\n",
+       "      <td>xgb</td>\n",
+       "      <td>hyperopt_kfold</td>\n",
+       "      <td>accuracy</td>\n",
+       "      <td>{'alpha': 3.3470534018722558, 'colsample_bytre...</td>\n",
+       "      <td>0.832754</td>\n",
+       "      <td>0.028829</td>\n",
+       "      <td>{'recall': [0.7246376811594203, 0.764705882352...</td>\n",
+       "      <td>./output/modelsaves/titanic/xgb/202309-1713-23...</td>\n",
+       "      <td>6.943799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>202309-1713-2403-62146a4d-9ac6-40d5-8d5e-32bcc...</td>\n",
+       "      <td>{'dataset': 'titanic', 'model': 'catboost', 'b...</td>\n",
+       "      <td>titanic</td>\n",
+       "      <td>catboost</td>\n",
+       "      <td>hyperopt_kfold</td>\n",
+       "      <td>accuracy</td>\n",
+       "      <td>{'bagging_temperature': 0.9928196516799518, 'd...</td>\n",
+       "      <td>0.830513</td>\n",
+       "      <td>0.028147</td>\n",
+       "      <td>{'recall': [0.7246376811594203, 0.764705882352...</td>\n",
+       "      <td>./output/modelsaves/titanic/catboost/202309-17...</td>\n",
+       "      <td>64.763489</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              run_id  \\\n",
+       "0  202309-1713-2319-2541b093-306a-41cc-9e60-6b2fc...   \n",
+       "1  202309-1713-2321-50e57c58-0154-4c76-8c5a-d497e...   \n",
+       "2  202309-1713-2356-98436ca0-49db-4b1c-923b-b8f99...   \n",
+       "3  202309-1713-2403-62146a4d-9ac6-40d5-8d5e-32bcc...   \n",
+       "\n",
+       "                                          run_config  dataset     model  \\\n",
+       "0  {'dataset': 'iris', 'model': 'xgb', 'best_para...     iris       xgb   \n",
+       "1  {'dataset': 'iris', 'model': 'catboost', 'best...     iris  catboost   \n",
+       "2  {'dataset': 'titanic', 'model': 'xgb', 'best_p...  titanic       xgb   \n",
+       "3  {'dataset': 'titanic', 'model': 'catboost', 'b...  titanic  catboost   \n",
+       "\n",
+       "   execution_mode eval_metric  \\\n",
+       "0  hyperopt_kfold    accuracy   \n",
+       "1  hyperopt_kfold    accuracy   \n",
+       "2  hyperopt_kfold    accuracy   \n",
+       "3  hyperopt_kfold    accuracy   \n",
+       "\n",
+       "                                         best_params  best_score  score_std  \\\n",
+       "0  {'alpha': 3.9316627966597033, 'colsample_bytre...    0.946667   0.026667   \n",
+       "1  {'bagging_temperature': 0.14228166126511824, '...    0.960000   0.038873   \n",
+       "2  {'alpha': 3.3470534018722558, 'colsample_bytre...    0.832754   0.028829   \n",
+       "3  {'bagging_temperature': 0.9928196516799518, 'd...    0.830513   0.028147   \n",
+       "\n",
+       "                                      output_metrics  \\\n",
+       "0  {'accuracy': [0.9666666666666667, 0.9666666666...   \n",
+       "1  {'accuracy': [1.0, 0.9666666666666667, 0.93333...   \n",
+       "2  {'recall': [0.7246376811594203, 0.764705882352...   \n",
+       "3  {'recall': [0.7246376811594203, 0.764705882352...   \n",
+       "\n",
+       "                                    saved_model_path   run_time  \n",
+       "0  ./output/modelsaves/iris/xgb/202309-1713-2319-...   2.860786  \n",
+       "1  ./output/modelsaves/iris/catboost/202309-1713-...  34.557710  \n",
+       "2  ./output/modelsaves/titanic/xgb/202309-1713-23...   6.943799  \n",
+       "3  ./output/modelsaves/titanic/catboost/202309-17...  64.763489  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
