--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 43,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 44,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,13 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 45,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
    "source": [
     "mlp_small_param_grid = {\n",
-    "            \"outer_params\": {\"cv_iterations\": 2,\n",
+    "            \"outer_params\": {\"hyperopt_evals\": 2,\n",
     "                            \"early_stopping\": True,\n",
     "                            \"cv_size\": 4,\n",
     "                            \"validation_fraction\": 0.15,\n",
@@ -109,7 +109,7 @@
     "        }\n",
     "\n",
     "mlp_large_param_grid = {\n",
-    "            \"outer_params\": {\"cv_iterations\": 10,\n",
+    "            \"outer_params\": {\"hyperopt_evals\": 10,\n",
     "                            \"early_stopping\": True,\n",
     "                            \"cv_size\": 5,\n",
     "                            \"validation_fraction\": 0.15,\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 46,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 47,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 48,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 49,
    "id": "72e96cc2-ab06-4bc0-a35b-2b54f5b5aed1",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "8\n"
      ]
     }
    ],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 50,
    "id": "99364e7e-e377-4cd0-9364-535f68fb32c5",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 51,
    "id": "1994e417-e992-4166-a4ee-be5216827f5a",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 52,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 53,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 54,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 55,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 56,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 57,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 58,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 59,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 60,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -884,7 +884,7 @@
     "                            \"early_stopping\": True,\n",
     "                            \"early_stopping_patience\":6,\n",
     "                            \"validation_fraction\": 0.2},\n",
-    "                           \n",
+    "                           \"resnet_depth\": \n",
     "                            \"learning_rate\": [0.0001, 0.001],\n",
     "                            \"batch_size\": [8,16,32,64,128],\n",
     "                            \"scheduler_factor\": [0.1, 0.9],\n",
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 61,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -913,7 +913,7 @@
     "templates =[\n",
     "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "    #generate_model_template(\"housing\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    #generate_model_template(\"housing\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "    #generate_model_template(\"housing\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
     "    #generate_model_template(\"housing\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
@@ -925,10 +925,41 @@
     "    #generate_model_template(\"housing\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "    #generate_model_template(\"housing\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
     "\n",
-    "            \n",
+    "\n",
+    "\n",
+    "    generate_model_template(\"iris\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "\n",
+    "\n",
+    "    generate_model_template(\"titanic\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "\n",
+    "    \n",
     "  #generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "  #generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "  #generate_model_template(\"adult\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "  #generate_model_template(\"adult\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
     "  #generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "  #generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
@@ -942,7 +973,7 @@
     "#\n",
     "  #generate_model_template(\"heloc\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "  #generate_model_template(\"heloc\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "  #generate_model_template(\"heloc\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "  #generate_model_template(\"heloc\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
     "  #generate_model_template(\"heloc\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "  #generate_model_template(\"heloc\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
@@ -956,7 +987,7 @@
     "\n",
     "    generate_model_template(\"covertype\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"covertype\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "    generate_model_template(\"covertype\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"covertype\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
     "    generate_model_template(\"covertype\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"covertype\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
@@ -970,7 +1001,7 @@
     "\n",
     "    generate_model_template(\"creditcard\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"creditcard\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "    generate_model_template(\"creditcard\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"creditcard\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
     "    generate_model_template(\"creditcard\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"creditcard\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
@@ -987,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 62,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
