lift metric add

--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 21,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 22,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
     "s1dcnn_small_param_grid =  {\n",
     "        \"outer_params\": {\n",
     "            \"hyperopt_evals\":100,\n",
-    "            \"num_epochs\": 1000,\n",
+    "            \"max_epochs\": 1000,\n",
     "            \"early_stopping\": True,\n",
     "            \"shuffle\": True,\n",
     "            \"validation_fraction\": 0.15,\n",
@@ -69,7 +69,7 @@
     "s1dcnn_large_param_grid =  {\n",
     "        \"outer_params\": {\n",
     "            \"hyperopt_evals\":10,\n",
-    "            \"num_epochs\": 1000,\n",
+    "            \"max_epochs\": 1000,\n",
     "            \"early_stopping\": True,\n",
     "            \"shuffle\": True,\n",
     "            \"validation_fraction\": 0.15,\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 23,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 24,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 25,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 26,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 27,
    "id": "72e96cc2-ab06-4bc0-a35b-2b54f5b5aed1",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 28,
    "id": "99364e7e-e377-4cd0-9364-535f68fb32c5",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 29,
    "id": "1994e417-e992-4166-a4ee-be5216827f5a",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 30,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 31,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 32,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 33,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 34,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 35,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 36,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 37,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -887,14 +887,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 38,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the desired parameters\n",
     "resnet_small_param_grid = {\"outer_params\":{\"hyperopt_evals\": 10,\n",
-    "                            \"num_epochs\": 2,\n",
+    "                            \"max_epochs\": 1000,\n",
     "                            \"early_stopping\": True,\n",
     "                            \"early_stopping_patience\":6,\n",
     "                            \"validation_fraction\": 0.2},\n",
@@ -915,7 +915,7 @@
     "\n",
     "# Set the desired parameters\n",
     "resnet_large_param_grid = {\"outer_params\":{\"hyperopt_evals\": 10,\n",
-    "                            \"num_epochs\": 1000,\n",
+    "                            \"max_epochs\": 1000,\n",
     "                            \"early_stopping\": True,\n",
     "                            \"early_stopping_patience\":6,\n",
     "                            \"validation_fraction\": 0.15},\n",
@@ -937,69 +937,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 39,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates =[\n",
-    " #   generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\",\"node\", param_grid = node_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"housing\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
-    "#\n",
-    "#\n",
-    "#\n",
-    " #   generate_model_template(\"iris\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\",\"node\", param_grid = node_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
-    " #   generate_model_template(\"iris\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
-    " #   \n",
-    " # generate_model_template(\"titanic\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\",\"node\", param_grid = node_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
-    " # generate_model_template(\"titanic\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
-    " # \n",
-    " #generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\",\"node\", param_grid = node_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
-    " #generate_model_template(\"adult\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "\n",
+    "\n",
+    "\n",
+    "    generate_model_template(\"iris\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "    \n",
+    "  generate_model_template(\"titanic\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "  generate_model_template(\"titanic\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "  \n",
+    " generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    " generate_model_template(\"adult\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
     "\n",
     " generate_model_template(\"heloc\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     " generate_model_template(\"heloc\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 40,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
