--- a/notebooks/DatasetsExploration.ipynb
+++ b/notebooks/DatasetsExploration.ipynb
@@ -17,6 +17,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "5a6a2c74-a67c-4e8c-ace7-43e18a62900f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "only integer scalar arrays can be converted to a scalar index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43my_true\u001b[49m\u001b[43m[\u001b[49m\u001b[43msorted_indices\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: only integer scalar arrays can be converted to a scalar index"
+     ]
+    }
+   ],
+   "source": [
+    "y_true[sorted_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "ac538c6a-000f-4654-8ef6-4db8f48a6e13",
    "metadata": {},
