--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "72e96cc2-ab06-4bc0-a35b-2b54f5b5aed1",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "99364e7e-e377-4cd0-9364-535f68fb32c5",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "1994e417-e992-4166-a4ee-be5216827f5a",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1048,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
+   "id": "6e2a41fc-be8a-45a4-aadc-dba463679c27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "templates = [generate_model_template(\"titanic\",\"autoint\", param_grid = autoint_large_param_grid.copy())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
