--- a/notebooks/Add run elements_default.ipynb
+++ b/notebooks/Add run elements_default.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 3,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 6,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 7,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 8,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 9,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 10,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 11,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 12,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 13,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 14,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 15,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 16,
    "id": "6e2a41fc-be8a-45a4-aadc-dba463679c27",
    "metadata": {},
    "outputs": [],
@@ -737,8 +737,8 @@
     "#generate_model_template(\"titanic\",\"xgb\",param_grid = xgb_large_default_grid.copy()),\n",
     "#generate_model_template(\"titanic\",\"catboost\", param_grid = catboost_large_default_grid.copy()),\n",
     "#generate_model_template(\"titanic\", \"resnet\", param_grid = resnet_large_default_grid.copy()),\n",
-    "generate_model_template(\"titanic\", \"tabnet\",param_grid = tabnet_large_default_grid.copy()),\n",
-    "generate_model_template(\"titanic\", \"gate\", param_grid = gate_large_default_grid.copy()),\n",
+    "#generate_model_template(\"titanic\", \"tabnet\",param_grid = tabnet_large_default_grid.copy()),\n",
+    "#generate_model_template(\"titanic\", \"gate\", param_grid = gate_large_default_grid.copy()),\n",
     "generate_model_template(\"titanic\",\"fttransformer\", param_grid = fttransformer_large_default_grid.copy()),\n",
     "generate_model_template(\"titanic\", \"categoryembedding\", param_grid = catembed_large_default_grid.copy()),\n",
     "generate_model_template(\"titanic\",\"gandalf\", param_grid = gandalf_large_default_grid.copy()),\n",
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 17,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
