s1dcnn lift fix + autoint default fix

--- a/notebooks/Add run elements_default.ipynb
+++ b/notebooks/Add run elements_default.ipynb
@@ -46,7 +46,7 @@
     "s1dcnn_small_default_grid =  {\n",
     "        \"outer_params\": {\n",
     "            \"hyperopt_evals\":1,\n",
-    "            \"max_epochs\": 1000,\n",
+    "            \"max_epochs\": 1,\n",
     "            \"early_stopping\": True,\n",
     "            \"shuffle\": True,\n",
     "            \"validation_fraction\": 0.15,\n",
@@ -62,7 +62,7 @@
     "s1dcnn_large_default_grid =  {\n",
     "        \"outer_params\": {\n",
     "            \"hyperopt_evals\":1,\n",
-    "            \"max_epochs\": 1000,\n",
+    "            \"max_epochs\": 1,\n",
     "            \"early_stopping\": True,\n",
     "            \"shuffle\": True,\n",
     "            \"validation_fraction\": 0.15,\n",
@@ -732,7 +732,7 @@
    "outputs": [],
    "source": [
     "templates = [\n",
-    "#generate_model_template(\"titanic\",\"s1dcnn\", param_grid = s1dcnn_small_default_grid.copy()),\n",
+    "generate_model_template(\"titanic\",\"s1dcnn\", param_grid = s1dcnn_small_default_grid.copy()),\n",
     "#generate_model_template(\"titanic\", \"mlp\",  param_grid = mlp_large_default_grid.copy()),\n",
     "#generate_model_template(\"titanic\",\"xgb\",param_grid = xgb_large_default_grid.copy()),\n",
     "#generate_model_template(\"titanic\",\"catboost\", param_grid = catboost_large_default_grid.copy()),\n",
