--- a/notebooks/Add_run_elements_default.ipynb
+++ b/notebooks/Add_run_elements_default.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "ff2d04ed-e7d7-41f0-9c95-be55d5eed23d",
    "metadata": {},
    "outputs": [],
@@ -769,24 +769,24 @@
     "generate_model_template(\"creditcard\",\"tabtransformer\", param_grid = tabtransformer_large_default_grid.copy()),\n",
     "generate_model_template(\"creditcard\",\"catboost\", param_grid = catboost_large_default_grid.copy()),]\n",
     "\n",
-    "templates3 = [generate_model_template(\"diabetes\",\"xgb\",param_grid = xgb_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\", \"mlp\",  param_grid = mlp_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\", \"resnet\", param_grid = resnet_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\", \"s1dcnn\", param_grid = s1dcnn_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\", \"tabnet\",param_grid = tabnet_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\", \"gate\", param_grid = gate_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\",\"fttransformer\", param_grid = fttransformer_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\", \"categoryembedding\", param_grid = catembed_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\",\"gandalf\", param_grid = gandalf_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\",\"node\", param_grid = node_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\",\"autoint\", param_grid = autoint_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\",\"tabtransformer\", param_grid = tabtransformer_large_default_grid.copy()),\n",
-    "generate_model_template(\"diabetes\",\"catboost\", param_grid = catboost_large_default_grid.copy()),]"
+    "templates3 = [generate_model_template(\"ageconditions\",\"xgb\",param_grid = xgb_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\", \"mlp\",  param_grid = mlp_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\", \"resnet\", param_grid = resnet_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\", \"s1dcnn\", param_grid = s1dcnn_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\", \"tabnet\",param_grid = tabnet_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\", \"gate\", param_grid = gate_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"fttransformer\", param_grid = fttransformer_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\", \"categoryembedding\", param_grid = catembed_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"gandalf\", param_grid = gandalf_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"node\", param_grid = node_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"autoint\", param_grid = autoint_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"tabtransformer\", param_grid = tabtransformer_small_default_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"catboost\", param_grid = catboost_small_default_grid.copy()),]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "id": "a573e6c6-0463-479b-ae6a-f6ac55bb50d1",
    "metadata": {},
    "outputs": [],
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "id": "16c04bb4-1c80-4e65-9ad8-d3fc6698c34e",
    "metadata": {},
    "outputs": [],
