--- a/notebooks/DatasetsExplorationBook.ipynb
+++ b/notebooks/DatasetsExplorationBook.ipynb
@@ -716,6 +716,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "adaa7554-f69b-4be7-af8a-479be245d1c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/boom/sdev/WTabRun/data/kaggle/icr-identify-age-related-conditions/test.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(r\"/home/boom/sdev/WTabRun/data/kaggle/icr-identify-age-related-conditions/test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "id": "3277002d-4581-4a3b-aecb-1cc8c812ecd2",
    "metadata": {},
