resnet fix num workers and catboost gpu limitation add

--- a/notebooks/Add_run_elements_default.ipynb
+++ b/notebooks/Add_run_elements_default.ipynb
@@ -781,7 +781,21 @@
     "generate_model_template(\"ageconditions\",\"node\", param_grid = node_small_default_grid.copy()),\n",
     "generate_model_template(\"ageconditions\",\"autoint\", param_grid = autoint_small_default_grid.copy()),\n",
     "generate_model_template(\"ageconditions\",\"tabtransformer\", param_grid = tabtransformer_small_default_grid.copy()),\n",
-    "generate_model_template(\"ageconditions\",\"catboost\", param_grid = catboost_small_default_grid.copy()),]"
+    "generate_model_template(\"ageconditions\",\"catboost\", param_grid = catboost_small_default_grid.copy()),]\n",
+    "\n",
+    "templates4 = [generate_model_template(\"breastcancer\",\"xgb\",param_grid = xgb_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\", \"mlp\",  param_grid = mlp_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\", \"resnet\", param_grid = resnet_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\", \"s1dcnn\", param_grid = s1dcnn_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\", \"tabnet\",param_grid = tabnet_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\", \"gate\", param_grid = gate_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"fttransformer\", param_grid = fttransformer_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\", \"categoryembedding\", param_grid = catembed_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"gandalf\", param_grid = gandalf_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"node\", param_grid = node_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"autoint\", param_grid = autoint_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"tabtransformer\", param_grid = tabtransformer_small_default_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"catboost\", param_grid = catboost_small_default_grid.copy()),]"
    ]
   },
   {
